[project]
name = "rainwave"
version = "6.0.0"
description = "rainwave.cc"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "aiohttp==3.13.3",
    "bcrypt==5.0.0",
    "emcache==1.3.3",
    "mutagen==1.47.0",
    "orjson==3.11.7",
    "pillow==12.1.0",
    "psycopg[binary]==3.3.2",
    "pydantic==2.12.5",
    "pyinotify==0.9.6",
    "pytz>=2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "tornado==6.5.4",
    "types-requests==2.32.4.20260107",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "testcontainers==4.14.1",
]

[tool.mypy]
files = "src/**/*.py"
mypy_path = ["src", "src/typestubs"]
exclude = ["src/frontend"]
